--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,11 @@ body {
 .main-header .nav-list a:hover {
     color: #ffd700;
 }
+h2{
+    text-align: center;
+}
+.container {
+    width: 90%;
+    margin: 0 auto;
+    max-width: 1200px;
+}
