--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,38 @@ h2{
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     margin-top: 30px;
 }
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+.card {
+    background-color: #b86b6b;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    width: 300px;
+    text-align: center;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+}
+.card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+.card-content {
+    padding: 15px;
+    background-color: #f9f9f9;
+}
+.card-content h3 {
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+    color: #1f1e1e;
+}
