--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,38 @@ h2{
     margin-bottom: 10px;
     color: #1f1e1e;
 }
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+.modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 500px;
+    text-align: center;
+    position: relative;
+    animation: fadeIn 0.5s ease;
+}
+.modal img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    margin-bottom: 15px;
+}
+.modal h3 {
+    font-size: 1.5rem;
+    color: #1f1e1e;
+}
+.modal p {
+    margin-top: 10px;
+    color: #555;
+}
